...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="b7b-m0-SzH" id="rhW-on-h3z"/>
                            <outlet property="delegate" destination="b7b-m0-SzH" id="cv7-RZ-89d"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Profile" id="oas-yn-bWJ">
                        <barButtonItem key="leftBarButtonItem" title="Logout" id="BlL-6N-vRQ">
                            <connections>
                                <action selector="logoutAction:" destination="b7b-m0-SzH" id="gjh-AV-WvI"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        <viewControllerLayoutGuide type="bottom" id="KZj-kh-4s1"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="NyP-mk-NEU">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DWf-iY-jxi">
                                <rect key="frame" x="16" y="90" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="IkJ-MM-m61"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pow-jo-GR5">
                                <rect key="frame" x="16" y="128" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="nr3-DL-mlw"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mSo-aD-Jy8">
                                <rect key="frame" x="16" y="166" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="DSu-iG-lcT"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonAction" destination="WYD-sw-KlX" eventType="touchUpInside" id="N8l-hq-Sf9"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bq0-ip-bm2">
                                <rect key="frame" x="65" y="617" width="244" height="30"/>
...
